--- a/nuestracarta.html
+++ b/nuestracarta.html
@@ -121,7 +121,7 @@
 <body>
     <header>
         <nav class="nav-links">
-            <a href="inicio.html" class="underline">Inicio</a>
+            <a href="index.html" class="underline">Inicio</a>
             <a href="MisiónvisiónyValores.html" class="underline">Misión, Visión y Valores</a>
         </nav>
         <div class="logo-container">
