--- a/MisiónvisiónyValores.html
+++ b/MisiónvisiónyValores.html
@@ -196,7 +196,7 @@
                 <p>"Convertirnos en una empresa líder en el mercado, reconocida a nivel internacional por nuestra excelencia en calidad, servicio y variedad gastronómica."</p>
             </div>
             <div class="bloque bloque3">
-                <img src="imagenes/arbol.png" alt="Arbol">
+                <img src="https://cpadfer.github.io/arisrestaurante-site/arbol.png" alt="Árbol">
                 <h3>Valores</h3>
                 <p>"Nos comprometemos a generar empleo para contribuir al bienestar de la sociedad y a formar nuevos chefs, brindándoles las herramientas y conocimientos necesarios para que, en el futuro, puedan independizarse y crear sus propias empresas."</p>
             </div>
