--- a/MisiónvisiónyValores.html
+++ b/MisiónvisiónyValores.html
@@ -191,7 +191,7 @@
                 <p>"Nos esforzamos por ofrecer a nuestros clientes un servicio excepcional, una amplia variedad de platos y productos de la mejor calidad."</p>
             </div>
             <div class="bloque bloque2">
-                <img src="imagenes/ojo.png" alt="Ícono 2">
+                <img src="imagenes/ojo.png" alt="Ojo">
                 <h3>Visión</h3>
                 <p>"Convertirnos en una empresa líder en el mercado, reconocida a nivel internacional por nuestra excelencia en calidad, servicio y variedad gastronómica."</p>
             </div>
