--- a/MisiónvisiónyValores.html
+++ b/MisiónvisiónyValores.html
@@ -186,12 +186,12 @@
     <main>
         <div class="contenedor-central">
             <div class="bloque bloque1">
-                <img src="imagenes/cerro.png" alt="Ícono 1">
+                <img src="https://cpadfer.github.io/arisrestaurante-site/Cerro.png" alt="Cerro">
                 <h3>Misión</h3>
                 <p>"Nos esforzamos por ofrecer a nuestros clientes un servicio excepcional, una amplia variedad de platos y productos de la mejor calidad."</p>
             </div>
             <div class="bloque bloque2">
-                <img src="imagenes/ojo.png" alt="Ojo">
+                <img src="https://cpadfer.github.io/arisrestaurante-site/ojo.png" alt="Ojo">
                 <h3>Visión</h3>
                 <p>"Convertirnos en una empresa líder en el mercado, reconocida a nivel internacional por nuestra excelencia en calidad, servicio y variedad gastronómica."</p>
             </div>
@@ -208,7 +208,7 @@
             <div class="footer-column">
                 <h2>Contáctanos</h2>
                 <div class="footer-item">
-                    <img src="imagenes/phone-call.png" alt="Teléfono">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/phone-call.png" alt="Telefono">
                     <p>(065) 23-14-70</p>
                 </div>
                 <div class="footer-item">
