--- a/MisiónvisiónyValores.html
+++ b/MisiónvisiónyValores.html
@@ -212,22 +212,22 @@
                     <p>(065) 23-14-70</p>
                 </div>
                 <div class="footer-item">
-                    <img src="imagenes/phone-call.png" alt="Teléfono">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/phone-call.png" alt="Telefono">
                     <p>(065) 23-14-77</p>
                 </div>
                 <div class="footer-item">
-                    <img src="imagenes/phone-call.png" alt="Teléfono">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/phone-call.png" alt="Telefono">
                     <p>(065) 22-12-15</p>
                 </div>
             </div>
             <div class="footer-column">
                 <h2>Horario y Ubicación</h2>
                 <div class="footer-item">
-                    <img src="imagenes/food.png" alt="Horario">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/food.png" alt="Food">
                     <p>Lunes - Domingo: 9:00 AM - 10:00 PM</p>
                 </div>
                 <div class="footer-item">
-                    <img src="imagenes/icoubica.png" alt="Ubicación">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/icoubica.png" alt="Ubicacion">
                     <p>Jr. Próspero 127 - Iquitos</p>
                 </div>
             </div>
