--- a/nuestracarta.html
+++ b/nuestracarta.html
@@ -125,7 +125,7 @@
             <a href="MisiónvisiónyValores.html" class="underline">Misión, Visión y Valores</a>
         </nav>
         <div class="logo-container">
-            <img src="imagenes/logoaris.png" alt="Logo del Restaurante" class="logo">
+            <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/logoaris.png" alt="Logo del Restaurante" class="logo">
         </div>
         <nav class="nav-links">
             <a href="nuestracarta.html" class="underline">Nuestra Carta</a>
@@ -158,26 +158,26 @@
             <div class="footer-column">
                 <h2>Contáctanos</h2>
                 <div class="footer-item">
-                    <img src="imagenes/phone-call.png" alt="Teléfono">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/phone-call.png" alt="Telefono">
                     <p>(065) 23-14-70</p>
                 </div>
                 <div class="footer-item">
-                    <img src="imagenes/phone-call.png" alt="Teléfono">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/phone-call.png" alt="Telefono">
                     <p>(065) 23-14-77</p>
                 </div>
                 <div class="footer-item">
-                    <img src="imagenes/phone-call.png" alt="Teléfono">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/phone-call.png" alt="Telefono">
                     <p>(065) 22-12-15</p>
                 </div>
             </div>
             <div class="footer-column">
                 <h2>Horario y Ubicación</h2>
                 <div class="footer-item">
-                    <img src="imagenes/food.png" alt="Horario">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/food.png" alt="Horario">
                     <p>Lunes - Domingo: 9:00 AM - 10:00 PM</p>
                 </div>
                 <div class="footer-item">
-                    <img src="imagenes/icoubica.png" alt="Ubicación">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/icoubica.png" alt="Ubicación">
                     <p>Jr. Próspero 127 - Iquitos</p>
                 </div>
             </div>
