--- a/nuestracarta.html
+++ b/nuestracarta.html
@@ -173,11 +173,11 @@
             <div class="footer-column">
                 <h2>Horario y Ubicación</h2>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/food.png" alt="Horario">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/food.png" alt="Food">
                     <p>Lunes - Domingo: 9:00 AM - 10:00 PM</p>
                 </div>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/icoubica.png" alt="Ubicación">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/icoubica.png" alt="Ubicacion">
                     <p>Jr. Próspero 127 - Iquitos</p>
                 </div>
             </div>
