--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <div class="footer-column">
                 <h2>Horario y Ubicación</h2>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/food.png" alt="Horario">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/food.png" alt="Food">
                     <p>Lunes - Domingo: 9:00 AM - 10:00 PM</p>
                 </div>
                 <div class="footer-item">
