--- a/MisiónvisiónyValores.html
+++ b/MisiónvisiónyValores.html
@@ -175,7 +175,7 @@
             <a href="MisiónvisiónyValores.html" class="underline">Misión, Visión y Valores</a>
         </nav>
         <div class="logo-container">
-            <img src="imagenes/logoaris.png" alt="Logo-del-Restaurante" class="logo">
+            <img src="imagenes/logoaris.png" alt="Logo-del-Restaurante" class="Logoaris">
         </div>
         <nav class="nav-links">
             <a href="nuestracarta.html" class="underline">Nuestra Carta</a>
