--- a/MisiónvisiónyValores.html
+++ b/MisiónvisiónyValores.html
@@ -175,7 +175,8 @@
             <a href="MisiónvisiónyValores.html" class="underline">Misión, Visión y Valores</a>
         </nav>
         <div class="logo-container">
-            <img src="imagenes/logoaris.png" alt="Logo-del-Restaurante" class="Logoaris">
+            <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/logoaris.png" alt="Logo del Restaurante" class="logoaris">
+
         </div>
         <nav class="nav-links">
             <a href="nuestracarta.html" class="underline">Nuestra Carta</a>
