--- a/MisiónvisiónyValores.html
+++ b/MisiónvisiónyValores.html
@@ -224,7 +224,7 @@
             <div class="footer-column">
                 <h2>Horario y Ubicación</h2>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/food.png" alt="Food">
+                    <img src="https://cpadfer.github.io/arisrestaurante-site/food.png" alt="Horario">
                     <p>Lunes - Domingo: 9:00 AM - 10:00 PM</p>
                 </div>
                 <div class="footer-item">
