--- a/MisiónvisiónyValores.html
+++ b/MisiónvisiónyValores.html
@@ -175,7 +175,7 @@
             <a href="MisiónvisiónyValores.html" class="underline">Misión, Visión y Valores</a>
         </nav>
         <div class="logo-container">
-            <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/logoaris.png" alt="Logo del Restaurante" class="logo-container">
+            <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/logoaris.png" alt="Logo del Restaurante" class="logo">
 
         </div>
         <nav class="nav-links">
