--- a/nuestracarta.html
+++ b/nuestracarta.html
@@ -17,6 +17,7 @@
             align-items: center;
             background: none;
         }
+
         header {
             background-color: #002E5D;
             padding: 0px 0;
@@ -26,10 +27,12 @@
             gap: 20px;
             width: 100%;
         }
+
         .nav-links {
             display: flex;
             gap: 10px;
         }
+
         .nav-links a {
             text-decoration: none;
             color: white;
@@ -39,44 +42,62 @@
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
+
         .nav-links a:hover {
             background-color: rgba(255, 255, 255, 0.2);
         }
-        .logo-container {
-            display: flex;
-            justify-content: center;
-        }
+
         .nav-links a.underline {
             text-decoration: underline;
         }
+
         .logo-container {
             display: flex;
             justify-content: center;
         }
+
         .logo {
             max-width: 150px;
         }
+
         .menu-section {
             margin: 150px;
         }
+
         .menu-section h2 {
             background-color: #002E5D;
             color: white;
             padding: 10px;
             border-radius: 5px;
         }
+
         .menu-section ul {
             list-style: none;
             padding: 0;
+            text-align: left;
         }
+
         .menu-section li {
             margin: 10px 0;
+            position: relative;
+            padding-left: 25px;
         }
+
+        .menu-section li::before {
+            content: '•';
+            position: absolute;
+            left: 0;
+            color: gold;
+            font-size: 22px;
+            line-height: 1;
+        }
+
         .menu-section a {
             text-decoration: none;
             color: #002E5D;
             font-weight: bold;
         }
+
         footer {
             background-color: #002E5D;
             color: white;
@@ -94,6 +115,7 @@
             flex-wrap: wrap;
             gap: 20px;
         }
+
         .footer-column {
             display: flex;
             flex-direction: column;
@@ -125,7 +147,7 @@
             <a href="MisiónvisiónyValores.html" class="underline">Misión, Visión y Valores</a>
         </nav>
         <div class="logo-container">
-            <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/logoaris.png" alt="Logo del Restaurante" class="logo">
+            <img src="imagenes/logoaris.png" alt="Logo del Restaurante" class="logo">
         </div>
         <nav class="nav-links">
             <a href="nuestracarta.html" class="underline">Nuestra Carta</a>
@@ -158,26 +180,26 @@
             <div class="footer-column">
                 <h2>Contáctanos</h2>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/phone-call.png" alt="Telefono">
+                    <img src="imagenes/phone-call.png" alt="Teléfono">
                     <p>(065) 23-14-70</p>
                 </div>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/phone-call.png" alt="Telefono">
+                    <img src="imagenes/phone-call.png" alt="Teléfono">
                     <p>(065) 23-14-77</p>
                 </div>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/phone-call.png" alt="Telefono">
+                    <img src="imagenes/phone-call.png" alt="Teléfono">
                     <p>(065) 22-12-15</p>
                 </div>
             </div>
             <div class="footer-column">
                 <h2>Horario y Ubicación</h2>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/food.png" alt="Food">
+                    <img src="imagenes/food.png" alt="Horario">
                     <p>Lunes - Domingo: 9:00 AM - 10:00 PM</p>
                 </div>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/icoubica.png" alt="Ubicacion">
+                    <img src="imagenes/icoubica.png" alt="Ubicación">
                     <p>Jr. Próspero 127 - Iquitos</p>
                 </div>
             </div>
