--- a/nuestracarta.html
+++ b/nuestracarta.html
@@ -167,7 +167,7 @@
             <li><a href="https://drive.google.com/file/d/1-U_8Pqjv9A6lHi1QBCRGSXE1B4_ve7ny/view?usp=drive_link" target="_blank">Menús y Entradas</a></li>
             <li><a href="https://drive.google.com/file/d/1TIoTxCWM6p4JpIhnY-FY0lpZsButEC7K/view?usp=drive_link" target="_blank">Comidas Regionales, Criollas y Piqueos</a></li>
             <li><a href="https://drive.google.com/file/d/174rW270pQOL8l-b9aY7KMM5_8AzMjlLe/view?usp=drive_link" target="_blank">Otros Platos y Platos Sugeridos</a></li>
-            <li><a href="https://drive.google.com/file/d/118lfsX9ry8wKhC9oJxFK0gPatMc8nyE7/view?usp=drive_link" target="_blank">Platos de Fácil Digestión, Súper S y Vegetarianos</a></li>
+            <li><a href="https://drive.google.com/file/d/118lfsX9ry8wKhC9oJxFK0gPatMc8nyE7/view?usp=drive_link" target="_blank">Platos de Fácil Digestión, Súper Saludables y Vegetarianos</a></li>
             <li><a href="https://drive.google.com/file/d/1LvcpKYBSTwIkTp9KS4VIRTXY6zlu-Nmr/view?usp=drive_link" target="_blank">Gamitana a la Parrilla, Brochetas y Coco</a></li>
             <li><a href="https://drive.google.com/file/d/1m_jjJR9K8EKUgiUuSr87EbREothd0gfW/view?usp=drive_link" target="_blank">Paiche a los 4 Quesos, Salchipapas, Bife Ancho y Menú Criollo</a></li>
             <li><a href="https://drive.google.com/file/d/1Ov6eDzbWq2dCKMdrStU3zsbRfAmGX1QA/view?usp=drive_link" target="_blank">Postres</a></li>
