--- a/nuestracarta.html
+++ b/nuestracarta.html
@@ -196,7 +196,7 @@
                 <h2>Horario y Ubicación</h2>
                 <div class="footer-item">
                     <img src="imagenes/food.png" alt="Horario">
-                    <p>Lunes - Domingo: 7:00 AM - 12:00 PM</p>
+                    <p>Lunes - Domingo: 7:00 AM - 12:00 AM</p>
                 </div>
                 <div class="footer-item">
                     <img src="imagenes/icoubica.png" alt="Ubicación">
