--- a/index.html
+++ b/index.html
@@ -265,7 +265,9 @@
     <div class="borde-rectangular">
         <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/logoaris.png" alt="Logo del Restaurante">
         <h2>Sobre Nosotros</h2>
-        <p>Somos una empresa Loretana situada en la zona céntrica donde está la Plaza de Armas de la ciudad de Iquitos. La empresa fue fundada en los años 80. Nos caracterizamos por brindar gran variedad de platos de comida nacionales e internacionales y ofrecer servicios con productos de calidad.</p>
+        <p>"Ubicados en el corazón de Iquitos, frente a la emblemática Plaza de Armas, somos una empresa loretana con historia. Desde los años 80, deleitamos a nuestros clientes con una exquisita variedad de platos de nuestra región, nacionales e internacionales. Nos enorgullece ofrecer productos de calidad, atención cálida y un sabor que conquista generaciones."
+
+</p>
     </div>
 
     <section id="carta" class="menu">
