--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
         .menu {
             background-color: rgba(255, 255, 255, 0.8);
-            padding: 20px;
+            height: 150px;
             border-radius: 10px;
-            margin-top: 20px;
+            margin-top: 0px;
         }
 
         .menu button {
@@ -110,10 +110,10 @@
         .borde-rectangular {
             color: white;
             border: 1px solid #002E5D;
-            width: 30%;
-            height: auto;
+            width: 515px;
+            height: 525px;
             margin: 0px;
-            margin-top: -850px;
+            margin-top: -650px;
             padding: 60px;
             background-color: rgba(11, 29, 128, 0.8);
             text-align: center;
@@ -122,12 +122,12 @@
 
         .borde-rectangular img {
             max-width: 200px;
-            margin: 20px auto;
+            margin: 50px;
         }
 
         .imagen-restaurante {
-            width: 65%;
-            height: auto;
+            width: 1270px;
+            height: 600px;
             object-fit: cover;
             border-radius: 10px;
         }
