--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenidos al ARIŚ</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -22,17 +26,18 @@
 
         header {
             background-color: #002E5D;
-            padding: 0px 0;
+            padding: 0px;
             display: flex;
+            flex-wrap: wrap;
             align-items: center;
-            justify-content: center;
-            gap: 20px;
+            justify-content: space-between;
             width: 100%;
         }
 
         .nav-links {
             display: flex;
             gap: 10px;
+            flex-wrap: wrap;
         }
 
         .nav-links a {
@@ -40,7 +45,7 @@
             color: white;
             font-weight: bold;
             font-size: 18px;
-            padding: 5px 10px;
+            padding: 5px 150px;
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
@@ -53,10 +58,8 @@
             text-decoration: underline;
         }
 
-        .logo-container {}
-
         .logo {
-            max-width: 100px;
+            max-width: 150px;
         }
 
         section {
@@ -65,9 +68,9 @@
 
         .menu {
             background-color: rgba(255, 255, 255, 0.8);
-            height: 150px;
+            padding: 20px;
             border-radius: 10px;
-            margin-top: 0px;
+            margin: 20px;
         }
 
         .menu button {
@@ -85,110 +88,86 @@
             background-color: #001a38;
         }
 
-        .contacto {
-            background-color: #002E5D;
-            color: white;
-            padding: 20px;
-            width: 100%;
-            margin-top: auto;
-        }
-
-        .telefonos {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-        }
-
         .contenedor-principal {
             display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            margin-top: 0px;
-            padding-right: 0px;
+            justify-content: center;
+            align-items: flex-start;
+            flex-wrap: wrap;
+            margin: 20px;
+            gap: 20px;
+        }
+
+        .imagen-restaurante {
+            max-width: 100%;
+            width: 600px;
+            height: 400px;
+            object-fit: cover;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            order: 2; /* Coloca la imagen a la derecha */
         }
 
         .borde-rectangular {
             color: white;
-            border: 1px solid #002E5D;
-            width: 515px;
-            height: 525px;
-            margin: 0px;
-            margin-top: -650px;
-            padding: 60px;
-            background-color: rgba(11, 29, 128, 0.8);
+            border: 2px solid #002E5D;
+            max-width: 600px;
+            width: 600px;
+            height: 400px;
+            margin: 0;
+            padding: 20px;
+            background-color: rgba(11, 29, 128, 0.85);
             text-align: center;
             border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            order: 1; /* Coloca el borde a la izquierda */
         }
 
         .borde-rectangular img {
-            max-width: 200px;
-            margin: 50px;
+            max-width: 100px;
+            margin: 10px auto;
         }
 
-        .imagen-restaurante {
-            width: 1270px;
-            height: 600px;
-            object-fit: cover;
-            border-radius: 10px;
+        .borde-rectangular h2 {
+            margin: 10px 0;
+            font-size: 1.5em;
+        }
+
+        .borde-rectangular p {
+            font-size: 1em;
+            line-height: 1.5;
+            margin: 0;
         }
 
         .bandera {
             display: flex;
-            justify-content: center;
-            margin: 0px auto;
-            width: 100%;
-            border-radius: 10px;
-            overflow: hidden;
-            position: relative;
+            flex-direction: column;
+            margin: 0px 0;
         }
 
-        .bandera div {
-            width: 33.33%;
-            height: 800px;
+        .bandera > div {
+            position: relative;
+            height: 300px;
             background-size: cover;
             background-position: center;
+            margin-bottom: 10px;
+            border-radius: 10px;
         }
 
-        .bandera-texto {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: yellow;
-            font-size: 5em;
-            font-weight: bold;
-            text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.7);
-            text-transform: uppercase;
-        }
-
-        /* Estilos para la imagen "desaloret" y su texto adicional */
-        .imagen-desaloret {
-            position: relative;
-        }
-
-        .texto-desaloret {
-            position: absolute;
-            bottom: 10px;
-            left: 40%;
-            transform: translateX(-50%);
-            color: red;
-            font-size: small;
-            margin: 90px;
-        }
-
-        /* Estilos para la imagen "polloalabrasa" y su texto adicional */
-        .imagen-pollosalabrasa {
-            position: relative;
-        }
-
+        .bandera-texto,
+        .texto-desaloret,
         .texto-pollosalabrasa {
             position: absolute;
-            bottom: 10px;
-            left: 45%;
+            bottom: 20px;
+            left: 50%;
             transform: translateX(-50%);
-            color: red;
-            font-size: small;
-            margin: 80px;
+            color: yellow;
+            font-size: 2em;
+            font-weight: bold;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            text-align: center;
         }
 
         footer {
@@ -197,7 +176,6 @@
             text-align: center;
             padding: 20px 0;
             width: 100%;
-            margin-top: auto;
         }
 
         .footer-content {
@@ -229,6 +207,32 @@
             text-align: center;
             margin-top: 10px;
         }
+
+        @media (min-width: 768px) {
+            .bandera {
+                flex-direction: row;
+            }
+            .bandera > div {
+                flex: 1;
+                height: 500px;
+                margin-bottom: 0;
+                margin-right: 10px;
+            }
+            .bandera > div:last-child {
+                margin-right: 0;
+            }
+            .contenedor-principal {
+                flex-wrap: nowrap; /* Evita que los elementos se apilen en pantallas grandes */
+            }
+        }
+
+        @media (max-width: 768px) {
+            .imagen-restaurante, .borde-rectangular {
+                width: 100%;
+                height: 300px;
+                order: unset; /* Restablece el orden en móviles */
+            }
+        }
     </style>
 </head>
 
@@ -238,9 +242,7 @@
             <a href="index.html" class="underline">Inicio</a>
             <a href="MisiónvisiónyValores.html" class="underline">Misión, Visión y Valores</a>
         </nav>
-        <div class="logo-container">
-            <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/logoaris.png" alt="Logo del Restaurante" class="logo">
-        </div>
+        <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/logoaris.png" alt="Logo del Restaurante" class="logo">
         <nav class="nav-links">
             <a href="nuestracarta.html" class="underline">Nuestra Carta</a>
             <a href="contacto.html" class="underline">Contacto</a>
@@ -248,26 +250,24 @@
     </header>
 
     <div class="bandera">
-        <div class="bandera-texto">Bienvenidos al Aris</div>
-        <div class="imagen-desaloret" style="background-image: url('imagenes/desaloret.jpg');">
-            <p class="texto-desaloret">Disfruta de nuestros exquisitos platos de nuestra region, nacionales e internacionales.</p>
+        <div style="background-image: url('imagenes/desaloret.jpg');">
+            <p class="texto-desaloret">Platos regionales, nacionales e internacionales</p>
         </div>
-        <div style="background-image: url('imagenes/salon0.jpg');"></div>
-        <div class="imagen-pollosalabrasa" style="background-image: url('imagenes/polloalabrza.jpg');">
-            <p class="texto-pollosalabrasa">Disfruta de nuestros ricos y deliciosos pollos a la brasa.</p>
+        <div style="background-image: url('imagenes/salon0.jpg');">
+            <p class="bandera-texto">Bienvenidos al Aris</p>
+        </div>
+        <div style="background-image: url('imagenes/polloalabrza.jpg');">
+            <p class="texto-pollosalabrasa">Delicioso pollo a la brasa</p>
         </div>
     </div>
 
     <div class="contenedor-principal">
+        <div class="borde-rectangular">
+            <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/logoaris.png" alt="Logo del Restaurante">
+            <h2>Sobre Nosotros</h2>
+            <p>"Ubicados en el corazón de Iquitos, frente a la emblemática Plaza de Armas, somos una empresa loretana con historia. Desde los años 80, deleitamos a nuestros clientes con una exquisita variedad de platos de nuestra región, nacionales e internacionales. Nos enorgullece ofrecer productos de calidad, atención cálida y un sabor que conquista generaciones."</p>
+        </div>
         <img src="imagenes/fachada0.jpg" alt="Restaurante ARIS" class="imagen-restaurante">
-    </div>
-
-    <div class="borde-rectangular">
-        <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/logoaris.png" alt="Logo del Restaurante">
-        <h2>Sobre Nosotros</h2>
-        <p>"Ubicados en el corazón de Iquitos, frente a la emblemática Plaza de Armas, somos una empresa loretana con historia. Desde los años 80, deleitamos a nuestros clientes con una exquisita variedad de platos de nuestra región, nacionales e internacionales. Nos enorgullece ofrecer productos de calidad, atención cálida y un sabor que conquista generaciones."
-
-</p>
     </div>
 
     <section id="carta" class="menu">
