--- a/MisiónvisiónyValores.html
+++ b/MisiónvisiónyValores.html
@@ -6,43 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenidos al ARIŚ</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
             margin: 0;
             padding: 0;
             text-align: center;
-            background-image: url("imagenes/HELADOS\ GIORNATTA\ 024_edited.jpg");
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
-            color: white;
+            color: black;
             align-items: center;
+            background: #FFFFFF; /* White background as requested */
+            /* Suggestion: For a subtle gradient, try:
+               background: linear-gradient(to bottom, #ffffff, #f5f5f5);
+            */
         }
 
         header {
             background-color: #002E5D;
-            padding: 0px 0;
+            padding: 10px 0;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 20px;
+            gap: 8px;
             width: 100%;
+            flex-wrap: wrap;
         }
 
         .nav-links {
             display: flex;
-            gap: 10px;
+            gap: 6px;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         .nav-links a {
             text-decoration: none;
             color: white;
             font-weight: bold;
-            font-size: 18px;
-            padding: 5px 10px;
+            font-size: 16px;
+            padding: 5px 8px;
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
@@ -61,79 +68,78 @@
         }
 
         .logo {
-            max-width: 150px;
+            max-width: 120px;
         }
 
         main {
             padding: 20px;
             margin: 20px;
             border-radius: 10px;
-            min-height: 100px;
-        }
-
-        .contenedor-central {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
-            margin-top: 50px;
-        }
-
-        .bloque {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            width: 600px;
-            height: 500px;
-            border-radius: 120px;
-            padding: 20px;
-            margin: 120px;
-            text-align: center;
-        }
-
-        .bloque img {
-            max-width: 80px;
-            margin-bottom: 15px;
-        }
-
-        .bloque1 {
-            background-color: #C622E3;
-        }
-
-        .bloque2 {
-            background-color: #EDEDED;
-            color: black;
-        }
-
-        .bloque3 {
-            background-color: #4BD1A0;
-        }
-
-        .contacto {
-            background-color: #002E5D;
-            color: white;
-            padding: 20px;
+            flex-grow: 1;
             width: 100%;
-            margin-top: auto;
-            border-radius: 0 0 10px 10px;
+            max-width: 800px;
+            background: transparent;
+            display: block;
+            overflow: visible;
+            /* Suggestion: For a card-like effect, try:
+               box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            */
         }
 
-        .telefonos {
+        .imagen-ajustable {
+            width: 100%;
+            max-width: 500px;
+            border-radius: 10px;
+            margin: 20px auto;
+            display: block;
+            object-fit: cover;
+            background: transparent;
+        }
+
+        main h1 {
+            font-size: 2em;
+            margin: 20px 0;
+            color: #000; /* Black text */
+            font-weight: 600;
+        }
+
+        main p {
+            font-size: 1.1em;
+            margin: 10px 0;
             display: flex;
+            align-items: center;
             justify-content: center;
-            gap: 15px;
-            flex-wrap: wrap;
+            gap: 10px;
+            color: #000; /* Black text */
+        }
+
+        main p img {
+            width: 20px;
+            height: 20px;
+            vertical-align: middle;
+            transition: transform 0.2s ease;
+        }
+
+        main p img:hover {
+            transform: scale(1.2); /* Suggestion: Hover effect for icons */
+        }
+
+        iframe {
+            width: 100%;
+            max-width: 600px;
+            height: 350px;
+            border: 0;
+            border-radius: 10px;
+            margin: 20px auto;
+            display: block;
         }
 
         footer {
             background-color: #002E5D;
             color: white;
             text-align: center;
-            padding: 20px 0;
+            padding: 15px 0;
             width: 100%;
-            position: relative;
-            bottom: 0;
             margin-top: auto;
         }
 
@@ -141,8 +147,9 @@
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 12px;
         }
+
         .footer-column {
             display: flex;
             flex-direction: column;
@@ -152,18 +159,198 @@
         .footer-item {
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 8px;
         }
 
         .footer-item img {
-            width: 40px;
-            height: 40px;
+            width: 28px;
+            height: 28px;
         }
 
         .footer-bottom {
             width: 100%;
             text-align: center;
-            margin-top: 10px;
+            margin-top: 8px;
+            font-size: 0.9em;
+        }
+
+        @media (min-width: 1200px) {
+            .nav-links a {
+                font-size: 18px;
+                padding: 6px 12px;
+            }
+            .logo {
+                max-width: 150px;
+            }
+            main h1 {
+                font-size: 2.2em;
+            }
+            main p {
+                font-size: 1.2em;
+            }
+            main p img {
+                width: 22px;
+                height: 22px;
+            }
+            .imagen-ajustable {
+                max-width: 600px;
+            }
+            iframe {
+                height: 400px;
+            }
+        }
+
+        @media (min-width: 768px) and (max-width: 1199px) {
+            .nav-links a {
+                font-size: 17px;
+                padding: 5px 10px;
+            }
+            .logo {
+                max-width: 130px;
+            }
+            main h1 {
+                font-size: 2em;
+            }
+            main p {
+                font-size: 1.1em;
+            }
+            .imagen-ajustable {
+                max-width: 500px;
+            }
+            iframe {
+                height: 380px;
+            }
+            .footer-item img {
+                width: 30px;
+                height: 30px;
+            }
+        }
+
+        @media (min-width: 481px) and (max-width: 767px) {
+            header {
+                gap: 6px;
+                padding: 8px 0;
+            }
+            .nav-links {
+                gap: 5px;
+            }
+            .nav-links a {
+                font-size: 15px;
+                padding: 4px 7px;
+            }
+            .logo {
+                max-width: 110px;
+            }
+            main {
+                padding: 15px;
+                margin: 15px;
+            }
+            .imagen-ajustable {
+                max-width: 400px;
+            }
+            main h1 {
+                font-size: 1.8em;
+            }
+            main p {
+                font-size: 1em;
+            }
+            main p img {
+                width: 18px;
+                height: 18px;
+            }
+            iframe {
+                height: 300px;
+            }
+            .footer-item img {
+                width: 26px;
+                height: 26px;
+            }
+            .footer-bottom {
+                font-size: 0.85em;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header {
+                flex-direction: column;
+                gap: 5px;
+                padding: 6px 0;
+            }
+            .nav-links {
+                gap: 4px;
+                flex-direction: column;
+                align-items: center;
+            }
+            .nav-links a {
+                font-size: 14px;
+                padding: 4px 6px;
+            }
+            .logo {
+                max-width: 100px;
+            }
+            main {
+                padding: 12px;
+                margin: 12px;
+            }
+            .imagen-ajustable {
+                max-width: 100%;
+            }
+            main h1 {
+                font-size: 1.6em;
+            }
+            main p {
+                font-size: 0.95em;
+            }
+            main p img {
+                width: 16px;
+                height: 16px;
+            }
+            iframe {
+                height: 250px;
+            }
+            .footer-item img {
+                width: 24px;
+                height: 24px;
+            }
+            .footer-bottom {
+                font-size: 0.8em;
+            }
+        }
+
+        @media (max-width: 360px) {
+            header {
+                padding: 5px 0;
+            }
+            .nav-links a {
+                font-size: 13px;
+                padding: 3px 5px;
+            }
+            .logo {
+                max-width: 90px;
+            }
+            main h1 {
+                font-size: 1.5em;
+            }
+            main p {
+                font-size: 0.9em;
+            }
+            main p img {
+                width: 14px;
+                height: 14px;
+            }
+            .imagen-ajustable {
+                max-width: 100%;
+            }
+            iframe {
+                height: 200px;
+            }
+            .footer-item img {
+                width: 22px;
+                height: 22px;
+            }
+            .footer-bottom {
+                font-size: 0.75em;
+            }
         }
     </style>
 </head>
@@ -175,8 +362,7 @@
             <a href="MisiónvisiónyValores.html" class="underline">Misión, Visión y Valores</a>
         </nav>
         <div class="logo-container">
-            <img src="https://cpadfer.github.io/arisrestaurante-site/imagenes/logoaris.png" alt="Logo del Restaurante" class="logo">
-
+            <img src="imagenes/logoaris.png" alt="Logo del Restaurante" class="logo">
         </div>
         <nav class="nav-links">
             <a href="nuestracarta.html" class="underline">Nuestra Carta</a>
@@ -185,23 +371,13 @@
     </header>
     
     <main>
-        <div class="contenedor-central">
-            <div class="bloque bloque1">
-                <img src="https://cpadfer.github.io/arisrestaurante-site/cerro.png" alt="Cerro">
-                <h3>Misión</h3>
-                <p>"Nos esforzamos por ofrecer a nuestros clientes un servicio excepcional, una amplia variedad de platos y productos de la mejor calidad."</p>
-            </div>
-            <div class="bloque bloque2">
-                <img src="https://cpadfer.github.io/arisrestaurante-site/ojo.png" alt="Ojo">
-                <h3>Visión</h3>
-                <p>"Convertirnos en una empresa líder en el mercado, reconocida a nivel internacional por nuestra excelencia en calidad, servicio y variedad gastronómica."</p>
-            </div>
-            <div class="bloque bloque3">
-                <img src="https://cpadfer.github.io/arisrestaurante-site/arbol.png" alt="Árbol">
-                <h3>Valores</h3>
-                <p>"Nos comprometemos a generar empleo para contribuir al bienestar de la sociedad y a formar nuevos chefs, brindándoles las herramientas y conocimientos necesarios para que, en el futuro, puedan independizarse y crear sus propias empresas."</p>
-            </div>
-        </div>
+        <img src="imagenes/delyv.png" alt="Imagen del Restaurante" class="imagen-ajustable">
+        <h1>TELÉFONOS:</h1>
+        <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 23-14-70</p>
+        <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 23-14-77</p>
+        <p><img src="imagenes/phone-call.png" alt="Teléfono"> (065) 22-12-15</p>
+        
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.277761779523!2d-73.24642932502604!3d-3.749572096224319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91ea107035f100c3%3A0xd320e6212846b395!2sAri's%20Burger!5e0!3m2!1ses!2spe!4v1739562939942!5m2!1ses!2spe" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
 
     <footer>
@@ -209,26 +385,26 @@
             <div class="footer-column">
                 <h2>Contáctanos</h2>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/phone-call.png" alt="Telefono">
+                    <img src="imagenes/phone-call.png" alt="Teléfono">
                     <p>(065) 23-14-70</p>
                 </div>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/phone-call.png" alt="Telefono">
-                    <p>(065) 24-14-77</p>
+                    <img src="imagenes/phone-call.png" alt="Teléfono">
+                    <p>(065) 23-14-77</p>
                 </div>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/phone-call.png" alt="Telefono">
-                    <p>(065) 24-11-24</p>
+                    <img src="imagenes/phone-call.png" alt="Teléfono">
+                    <p>(065) 22-12-15</p>
                 </div>
             </div>
             <div class="footer-column">
                 <h2>Horario y Ubicación</h2>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/food.png" alt="Horario">
-                    <p>Lunes - Domingo: 7:00 AM - 12:00 AM</p>
+                    <img src="imagenes/food.png" alt="Horario">
+                    <p>Lunes - Domingo: 9:00 AM - 10:00 PM</p>
                 </div>
                 <div class="footer-item">
-                    <img src="https://cpadfer.github.io/arisrestaurante-site/icoubica.png" alt="Ubicacion">
+                    <img src="imagenes/icoubica.png" alt="Ubicación">
                     <p>Jr. Próspero 127 - Iquitos</p>
                 </div>
             </div>
