--- a/MisiónvisiónyValores.html
+++ b/MisiónvisiónyValores.html
@@ -29,7 +29,8 @@
 
         header {
             background-color: #002E5D;
-            padding: 10px 0;
+            /* ajusta exactamente la imagen logo con el tamaño del encabezado */
+            padding: 0px 0;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -195,8 +196,10 @@
             }
             .nav-links a {
                 font-size: 18px;
+                /* junta a las letras del menu del encabezado */
                 padding: 6px 12px;
             }
+            /* agranda la imagen del logo del encabezado */
             .logo {
                 max-width: 150px;
             }
@@ -380,13 +383,14 @@
 
 <body>
     <header>
+        <div class="logo-container">
+            <img src="imagenes/logoaris.png" alt="Logo del Restaurante" class="logo">
+        </div>
         <nav class="nav-links">
             <a href="index.html" class="underline">Inicio</a>
             <a href="MisiónvisiónyValores.html" class="underline">Misión, Visión y Valores</a>
         </nav>
-        <div class="logo-container">
-            <img src="imagenes/logoaris.png" alt="Logo del Restaurante" class="logo">
-        </div>
+        
         <nav class="nav-links">
             <a href="nuestracarta.html" class="underline">Nuestra Carta</a>
             <a href="contacto.html" class="underline">Contacto</a>
